# llm-guard-python

./: .ccg.yaml  .dockerignore  .gitignore  CLAUDE.md  Dockerfile.app  Dockerfile.init  Dockerfile.test  README.md  demo.py  docker-compose.yml  plan.md
.claude/: settings.json
.claude/skills/ccg/: SKILL.md
.claude/skills/ccg-analyze/: SKILL.md
.claude/skills/ccg-annotate/: SKILL.md
.claude/skills/ccg-docs/: SKILL.md
.claude/skills/ccg-workspace/: SKILL.md
.github/workflows/: ci.yml  publish.yml
config/: attack_vectors.toml  pii_patterns.toml
docs/superpowers/plans/: 2026-04-15-pii-guard.md  2026-04-16-semantic-layer.md
docs/superpowers/specs/: 2026-04-15-pii-guard-design.md  2026-04-16-semantic-layer-design.md
k8s/: demo-job.yaml
pii_guard/: Cargo.toml  pyproject.toml
pii_guard/python/llm_guard/: __init__.py  _cli.py  _hook.py  _httpx_hook.py  _streaming.py
pii_guard/python/llm_guard/_boot/: sitecustomize.py
pii_guard/src/: config.rs  detector.rs  lib.rs  logger.rs  semantic.rs  vectordb.rs
python/: llm_guard_hook.py  llm_guard_httpx_hook.py  pii_guard_hook.py  sitecustomize.py
tests/: conftest.py  hook_demo.py  k8s_demo.py  smoke_test.py  test_bootstrap.py  test_e2e_semantic.py  test_httpx_hook.py  test_import_hook.py  test_integration.py  test_pii_guard_api.py  test_response_api.py  test_response_scan.py  test_semantic.py  test_streaming_scanner.py
