[package]
name = "llm_guard"
version = "0.2.1"
edition = "2021"

[lib]
name = "_guard"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
fastembed = "4"
duckdb = { version = "1.0", features = ["bundled"] }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"
