[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "llm-guard-python"
version = "0.1.0"
description = "LLM Guard — PII 탐지 및 프롬프트 인젝션 차단 라이브러리"
requires-python = ">=3.13"
authors = [
    { name = "tae2089", email = "tae2089002@gmail.com" }
]
license = { text = "MIT" }
keywords = ["llm", "pii", "security", "prompt-injection", "jailbreak"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/tae2089/llm-guard-python"
Repository = "https://github.com/tae2089/llm-guard-python"
Issues = "https://github.com/tae2089/llm-guard-python/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "llm_guard"
